<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context=".Home.Views.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_section_title"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/home_section_background">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/button_logout_text" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ssid_section_title"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/ssid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/home_section_background">

            <TextView
                android:id="@+id/tv_connecting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:text="@string/connecting"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_connection_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_connecting"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_connection_err"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_retry_connection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_ssid"
                android:layout_marginTop="8dp"
                android:text="@string/retry_connection"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_mqtt_sction_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mqtt_section_title"
            android:textSize="16sp"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/mqtt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@drawable/home_section_background">

            <TextView
                android:id="@+id/tv_mqtt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:text="@string/connecting"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/connect_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"

            android:background="@drawable/home_section_background">

            <Button
                android:id="@+id/btn_connect_to_wifi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/connect_wifi" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>